--- a/Lesson2/Base.lproj/Main.storyboard
+++ b/Lesson2/Base.lproj/Main.storyboard
@@ -183,8 +183,11 @@
                                     </mask>
                                 </variation>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hexColor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zPj-bz-JB9">
-                                <rect key="frame" x="159" y="514" width="96.5" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hexColor" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zPj-bz-JB9">
+                                <rect key="frame" x="147" y="514" width="120" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="O6n-LV-P65"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -230,6 +233,7 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="hexColor" destination="zPj-bz-JB9" id="BYL-kx-hir"/>
                         <outlet property="sliderBlue" destination="J1R-Bm-9Ja" id="nvV-mK-la1"/>
                         <outlet property="sliderGreen" destination="VhT-wY-tRU" id="BDl-fY-z0u"/>
                         <outlet property="sliderOpacity" destination="Gtg-Pt-56q" id="WKo-yZ-98o"/>
